feat(setup): setup backedn micro-services with nx

--- a/nx.json
+++ b/nx.json
@@ -38,7 +38,9 @@
         "targetName": "test"
       },
       "exclude": [
-        "apps/gateway-e2e/**/*"
+        "apps/gateway-e2e/**/*",
+        "apps/auth-e2e/**/*",
+        "apps/notification-e2e/**/*"
       ]
     }
   ]
