--- a/apps/gateway-e2e/project.json
+++ b/apps/gateway-e2e/project.json
@@ -2,22 +2,16 @@
   "name": "gateway-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "implicitDependencies": [
-    "gateway"
-  ],
+  "implicitDependencies": ["gateway"],
   "targets": {
     "e2e": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{e2eProjectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
         "jestConfig": "apps/gateway-e2e/jest.config.ts",
         "passWithNoTests": true
       },
-      "dependsOn": [
-        "gateway:build"
-      ]
+      "dependsOn": ["gateway:build"]
     }
   }
 }
